--- a/roles/system/tasks/essential.yml
+++ b/roles/system/tasks/essential.yml
@@ -12,9 +12,9 @@
 
 - name: Allow user to sudo without password
   ansible.builtin.lineinfile:
-    dest: /etc/sudoers.d/{{ ansible_host }}
+    dest: /etc/sudoers.d/{{ ansible_user }}
     create: true
     mode: '0440'
-    regexp: '^{{ ansible_host }}'
-    line: '{{ ansible_host }} ALL=(ALL) NOPASSWD:ALL'
+    regexp: '^{{ ansible_user }}'
+    line: '{{ ansible_user }} ALL=(ALL) NOPASSWD:ALL'
     validate: visudo -cf %s
