--- a/tasks/list_services.yml
+++ b/tasks/list_services.yml
@@ -9,6 +9,7 @@
       - "roles/containers/frontends"
       # - "roles/containers/media"
       # - "roles/containers/services"
+      # - "roles/containers/system"
     file_type: directory
     excludes: "homer"
     recurse: false
@@ -34,10 +35,6 @@
     web_applications: "{{ web_applications | default([]) + [{ 'logo': '/assets/tools/homer-icons/' + item.path.split('/')[-1] + '.png', 'name': lookup('vars', item.path.split('/')[-1])['dashboard_name'] | default(item.path.split('/')[-1] | title), 'url' : lookup('vars', item.path.split('/')[-1])['dashboard_url'] | default(''), 'endpoint': lookup('vars', item.path.split('/')[-1])['health_url'] | default(''), 'category': lookup('vars', item.path.split('/')[-1])['homer_category'] | default (''), 'port': lookup('vars', item.path.split('/')[-1])['ext_port'] | default ('') }] }}"
   when: lookup('vars', 'enable_' + item.path.split('/')[-1]) | default(False)
   with_items: "{{ containers.files }}"
-
-# - name: Print web applications
-#   ansible.builtin.debug:
-#     msg: "{{ web_applications }}"
 
 - name: Populate the URL dictionary with all containers
   ansible.builtin.set_fact:
