--- a/vars/all_vars.yml
+++ b/vars/all_vars.yml
@@ -13,8 +13,6 @@ lan_base: "{{ lan_subnet | regex_replace('.0/[0-9]{2}', '') }}"
 
 pihole_ip: "{{ lan_base }}.10"
 
-pihole_url: "http://{{ pihole_ip }}:81"
-
 homeserver_ip: "{{ lan_base }}.30"
 
 guid: "1000"
@@ -47,4 +45,9 @@ homer_port: '8080'
 
 enable_libreddit: true
 enable_nitter: false
-enable_chatbot: false
+
+# System
+
+enable_fritzbox: true
+enable_portainer: false
+pihole_url: "http://pi.hole/admin"
