--- a/tasks/list_services.yml
+++ b/tasks/list_services.yml
@@ -9,7 +9,7 @@
       - "roles/containers/frontends"
       # - "roles/containers/media"
       # - "roles/containers/services"
-      # - "roles/containers/system"
+      - "roles/containers/system"
     file_type: directory
     excludes: "homer"
     recurse: false
