--- a/vars/all_vars.yml
+++ b/vars/all_vars.yml
@@ -49,5 +49,6 @@ enable_nitter: false
 # System
 
 enable_fritzbox: true
-enable_portainer: false
+enable_portainer: true
+# enable_pihole: true
 pihole_url: "http://pi.hole/admin"
