--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,5 @@
 [defaults]
-inventory = inventory
 ansible_python_interpreter=/usr/bin/python3
+callbacks_enabled = profile_tasks
 host_key_checking = false
+inventory = inventory
