--- a/roles/system/tasks/main.yml
+++ b/roles/system/tasks/main.yml
@@ -1,3 +1,4 @@
 ---
 - ansible.builtin.include_tasks: essential.yml
+- ansible.builtin.include_tasks: lazydocker.yml
 - ansible.builtin.include_tasks: ssh.yml
