--- a/inventory.example
+++ b/inventory.example
@@ -6,7 +6,7 @@ ansible_user=<username>
 ansible_ssh_pass=<password>
 
 [testvm]
-192.168.130.200
+ubuntu ansible_host=192.168.130.200
 
 [testvm:vars]
 ansible_user=vagrant
