--- a/roles/containers/services/nextcloud/tasks/main.yml
+++ b/roles/containers/services/nextcloud/tasks/main.yml
@@ -14,7 +14,7 @@
 
 - name: Deploy Nextcloud
   community.docker.docker_container:
-    name: nextcloud
+    name: "{{ container_name }}"
     image: nextcloud:latest
     ports:
       - "{{ ext_port }}:80"
