--- a/roles/containers/system/pihole/tasks/config.yml
+++ b/roles/containers/system/pihole/tasks/config.yml
@@ -21,5 +21,5 @@
   community.docker.docker_container:
     name: pihole-unbound
     image: 'rlabinc/pihole-unbound:latest'
-    pull: true
+    pull: false
     restart: true
