--- a/roles/containers/system/portainer/tasks/main.yml
+++ b/roles/containers/system/portainer/tasks/main.yml
@@ -7,6 +7,8 @@
     volumes:
       - '/var/run/docker.sock:/var/run/docker.sock'
       - '{{ docker_dir }}/portainer:/data'
+    labels: 
+      com.centurylinklabs.watchtower.monitor-only: 'true'
     ports:
       - '8000:8000'
       - '{{ ext_port }}:9000'
