--- a/roles/containers/system/portainer/tasks/main.yml
+++ b/roles/containers/system/portainer/tasks/main.yml
@@ -10,7 +10,7 @@
     labels: 
       com.centurylinklabs.watchtower.monitor-only: 'true'
     ports:
-      - '8000:8000'
-      - '{{ ext_port }}:9000'
-      - '9443:9443'
+      - '127.0.0.1:8000:8000'
+      - '127.0.0.1:{{ ext_port }}:9000'
+      - '127.0.0.1:9443:9443'
     restart_policy: unless-stopped
