--- a/roles/containers/media/jellyfin/tasks/main.yml
+++ b/roles/containers/media/jellyfin/tasks/main.yml
@@ -5,7 +5,7 @@
     image: 'jellyfin/jellyfin:latest'
     pull: true
     ports:
-      - "{{ ext_port }}:8096"
+      - "127.0.0.1:{{ ext_port }}:8096"
     volumes:
       - "{{ docker_dir }}/jellyfin/config:/config"
     restart_policy: unless-stopped
