--- a/roles/containers/services/nextcloud/tasks/main.yml
+++ b/roles/containers/services/nextcloud/tasks/main.yml
@@ -17,7 +17,7 @@
     name: "{{ container_name }}"
     image: nextcloud:latest
     ports:
-      - "{{ ext_port }}:80"
+      - "127.0.0.1:{{ ext_port }}:80"
     links:
       - "mariadb:/var/lib/mysql"
     volumes:
