--- a/roles/homer/tasks/docker.yml
+++ b/roles/homer/tasks/docker.yml
@@ -13,5 +13,5 @@
     volumes:
       - "{{ docker_dir }}/{{ container_name }}:/www/assets"
     ports:
-      - "{{ homer_port }}:8080"
+      - "127.0.0.1:{{ homer_port }}:8080"
     restart_policy: unless-stopped
