--- a/roles/homer/tasks/xresources.yml
+++ b/roles/homer/tasks/xresources.yml
@@ -1,12 +1,45 @@
 ---
+# Compatibility issue workaround with xparser library 
+# not functioning with Python 3.10 and above.
+
 - name: Install pip
   ansible.builtin.package:
     name: python3-pip
     state: present
 
+- name: Check if Python 3.8 was installed
+  stat:
+    path: "/usr/bin/python3.8"
+  changed_when: false
+  failed_when: false
+  register: file_data
+
+- name: Installing add-apt-repository
+  ansible.builtin.apt:
+    name: software-properties-common
+    state: latest
+  when: not file_data.stat.exists
+
+- name: Add Deadsnake APT Repository
+  ansible.builtin.apt_repository:
+    repo: ppa:deadsnakes/ppa
+  when: not file_data.stat.exists
+
+- name: Pre-requsities for Python 3.8
+  ansible.builtin.command: sudo apt-cache policy python3.8
+  changed_when: false
+  when: not file_data.stat.exists
+
+- name: Installing Python 3.8 Dependencies
+  ansible.builtin.apt:
+    pkg: 
+      - python3.8
+      - python3.8-distutils
+  when: not file_data.stat.exists
+
 - name: Install the Xresources parser
-  ansible.builtin.pip:
-    name: xparser
+  ansible.builtin.command: python3.8 -m pip install xparser
+  when: not file_data.stat.exists
 
 - name: Install the Xresources file
   ansible.builtin.copy:
@@ -18,9 +51,14 @@
 
 - name: Parse the Xresources file
   ansible.builtin.shell:
-    cmd: "python3 -c 'import xrp; import json; result = xrp.parse_file(\"/home/{{ ansible_user }}/.Xresources\", encoding=\"utf8\"); print(json.dumps(dict(result.resources), indent = 4).replace(\"*.\", \"\").replace(\"*\", \"\"))'"
+    cmd: "python3.8 -c 'import xrp; import json; result = xrp.parse_file(\"/home/{{ ansible_user }}/.Xresources\", encoding=\"utf8\"); print(json.dumps(dict(result.resources), indent = 4).replace(\"*.\", \"\").replace(\"*\", \"\"))'"
   register: xresources
   changed_when: false
+  become_user: "{{ ansible_user }}"
+
+- name: debug
+  ansible.builtin.debug:
+    msg: "{{ xresources.stdout }}"
 
 - name: Save variables
   ansible.builtin.set_fact:
