--- a/roles/system/tasks/essential.yml
+++ b/roles/system/tasks/essential.yml
@@ -1,4 +1,15 @@
 ---
+- name: Update and upgrade apt packages
+  ansible.builtin.apt:
+    upgrade: yes
+    autoremove: yes
+    update_cache: yes
+
+- name: Install unattended upgrades package
+  ansible.builtin.package:
+    name: unattended-upgrades
+    state: present
+
 - name: Install extra packages
   ansible.builtin.apt:
     name: "{{ extra_packages }}"
