--- a/tasks/list_services.yml
+++ b/tasks/list_services.yml
@@ -6,9 +6,8 @@
   become: false
   ansible.builtin.find:
     paths:
-      - "roles/containers/frontends"
-      # - "roles/containers/media"
-      # - "roles/containers/services"
+      - "roles/containers/media"
+      - "roles/containers/services"
       - "roles/containers/system"
     file_type: directory
     excludes: "homer"
