Moved handler task into essential.yml

--- a/roles/system/tasks/essential.yml
+++ b/roles/system/tasks/essential.yml
@@ -35,8 +35,12 @@
     path: /etc/systemd/resolved.conf
     regexp: '^DNSStubListener'
     line: 'DNSStubListener=no'
-  notify:
-    - Restart Systemd
+
+- name: Restart Systemd
+  ansible.builtin.service:
+    name: systemd-resolved
+    state: stopped
+    enabled: false
 
 - name: Remove symlink on /etc/resolv.conf
   ansible.builtin.file:
