--- a/roles/system/tasks/lazydocker.yml
+++ b/roles/system/tasks/lazydocker.yml
@@ -9,10 +9,26 @@
   failed_when: lazydocker_installed.rc not in [0,1]
   register: lazydocker_installed
 
+- name: Get Linux Architecture
+  ansible.builtin.shell: | 
+    ARCH=$(uname -m)
+    case $ARCH in
+        i386|i686) ARCH=x86 ;;
+        armv6*) ARCH=armv6 ;;
+        armv7*) ARCH=armv7 ;;
+        aarch64*) ARCH=arm64 ;;
+    esac
+    echo $ARCH
+  register: linux_architecture
+  when: lazydocker_installed.rc not in [ 0 ]
+
 - name: Install Lazydocker
   ansible.builtin.shell: |
-    LAZYDOCKER_VERSION=$(curl -s "https://api.github.com/repos/jesseduffield/lazydocker/releases/latest" | grep -Po '"tag_name": "v\K[0-9.]+')
-    curl -Lo lazydocker.tar.gz "https://github.com/jesseduffield/lazydocker/releases/latest/download/lazydocker_${LAZYDOCKER_VERSION}_Linux_x86_64.tar.gz"
+    ARCH={{ linux_architecture.stdout }}
+  
+    GITHUB_LATEST_VERSION=$(curl -s "https://api.github.com/repos/jesseduffield/lazydocker/releases/latest" | grep -Po '"tag_name": "v\K[0-9.]+')
+    GITHUB_FILE="lazydocker_${GITHUB_LATEST_VERSION}_$(uname -s)_${ARCH}.tar.gz"
+    curl -Lo lazydocker.tar.gz "https://github.com/jesseduffield/lazydocker/releases/latest/download/${GITHUB_FILE}"
   when: lazydocker_installed.rc not in [ 0 ]
 
 - name: Create tmp directory
