--- a/roles/containers/system/watchtower/tasks/main.yml
+++ b/roles/containers/system/watchtower/tasks/main.yml
@@ -7,4 +7,8 @@
     state: 'started'
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
+    env:
+      WATCHTOWER_NOTIFICATION_URL: "{{ watchtower_notification_url }}"
+      WATCHTOWER_CLEANUP: "true"
+      TZ: "{{ timezone }}"
     restart_policy: unless-stopped
